# Linux_ShareWiFi

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements.txt  run.sh
Linux_ShareWiFi/: __init__.py  __main__.py  create_ap_cli.py  main_window.py  qr_utils.py
linux_share_wifi/: __main__.py  main_window.py  qr_dialog.py  qr_utils.py  workers.py
wifi_host_qt/: __init__.py  __main__.py  main_window.py  qr_utils.py
