[project]
name = "Linux-ShareWiFi"
version = "0.1.0"
description = "Linux Share WiFi — PySide6 GUI for WiFi hotspot sharing via create_ap"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "qrcode[pil]>=7.4.2",
]

[project.scripts]
Linux-ShareWiFi = "Linux_ShareWiFi.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["Linux_ShareWiFi*"]
